# kp-rueck

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSIGNMENT_SYSTEM_AUDIT.md  BUGS_FOUND.md  CLAUDE.md  CODEBASE_AUDIT.md  CODE_OF_CONDUCT.md  CONFIGURATION_SETTINGS.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  DESIGN_DOC.md  E2E_TESTING_PLAN.md  FEEDBACK-PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_ROADMAP.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  NEW_FEATURES_FOLLOWUP.md  NEW_FEATURES_QUESTIONNAIRE.md  OFFLINE_MAPS.md  PERSISTENCE_UPDATE.md  PRINT_AGENT.md  QUICK_WINS_IMPLEMENTATION.md  RAILWAY.md  RAILWAY_READY.md  RAILWAY_SETUP.md  README.md  RESTORATION_STATUS.md  SECURITY.md  SPRINT_1_IMPLEMENTATION_SUMMARY.md  SPRINT_1_TEST_SUMMARY.md  SPRINT_2_IMPLEMENTATION_SUMMARY.md  SPRINT_2_QUICK_WINS_COMPLETED.md  SPRINT_2_TEST_QUICK_REFERENCE.md  SPRINT_2_TEST_SUMMARY.md  SPRINT_3_IMPLEMENTATION_SUMMARY.md  SPRINT_3_TEST_QUICK_REFERENCE.md  (+25 more)
backend/: .dockerignore  .env.example  .env.railway  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  railway.json  seed_railway.py  start-dev.sh  start.sh  test_divera_webhook.py  test_divera_webhook.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_assignments_active_index.py  06b032721f70_add_personnel_check_in_tracking.py  0d5cc7325349_remove_critical_priority.py  0d9651aa45bb_add_event_special_functions_table.py  15f9942dbb87_add_display_order_and_radio_call_sign_.py  1fab06fcd242_harmonize_availability_status_to_.py  2565181f99b1_add_reko_submitted_notification_type.py  371d5ab93e7b_add_training_emergency_notification_type.py  3a8f9c1d2e5b_add_reko_arrived_at_and_notification.py  3b2810233f06_add_tags_field_to_personnel.py  436a11d28487_add_sync_log_table.py  62602ddaaa6f_add_category_sort_order_fields.py  626a32e7e98b_add_notifications_table.py  79c6490d57fc_add_auto_attach_divera_to_events.py  880ce6c5ec4d_initial_schema_with_all_tables.py  8cbb18ad448d_add_material_groups_and_consumable_flag.py  92081e9489a9_add_performance_indexes.py  9452137d14fc_add_nachbarhilfe_flag_to_incidents.py  94803763b5de_remove_priority_from_divera_emergencies.py  a1b2c3d4e5f6_add_print_jobs_table.py  a2b3c4d5e6f7_add_user_management_fields.py  b01cf4b340e5_add_deleted_at_to_incidents.py  b3c4d5e6f7a8_add_email_to_users_for_microsoft_auth.py  b3c4d5e6f7g8_add_missing_performance_indexes.py  b42d9c6f8bb7_add_submitted_by_personnel_id_to_reko_.py  b803ba1b851c_add_training_automation_tables.py  be398c3e264a_add_events_table.py  c4d5e6f7g8h9_add_reko_done_status_nachbarhilfe_note_fire_danger.py  cbd35b46565b_add_event_attendance_table_for_event_.py  d1a2b3c4d5e6_add_am_warten_zu_fuss_driver_stay.py  dd20084b9da4_add_timezone_support_missing_indexes_.py  e0f2105b967e_add_contact_and_internal_notes_to_.py  e99d83752bc8_increase_reko_token_column_size_to_500.py  fccf2c43febf_add_divera_emergencies_table.py
backend/app/: config.py  crud.py  database.py  init_db.py  logging_config.py  main.py  models.py  schemas.py  seed.py  seed_demo.py  seed_training.py  traccar.py  websocket_manager.py
backend/app/api/: admin.py  assignments.py  audit.py  auth.py  divera.py  events.py  exports.py  health.py  help.py  incidents.py  materials.py  notifications.py  personnel.py  personnel_checkin.py  print.py  reko.py  reko_dashboard.py  routes.py  settings.py  special_functions.py  stats.py  sync.py  traccar.py  training.py  users.py  vehicles.py  viewer.py
backend/app/auth/: config.py  dependencies.py  security.py  token_blocklist.py
backend/app/background/: __init__.py  demo_reset.py  sync_scheduler.py
backend/app/crud/: __init__.py  assignments.py  base.py  divera.py  events.py  incidents.py  materials.py  personnel.py  personnel_checkin.py  print_jobs.py  reko.py  reko_dashboard.py  special_functions.py  vehicles.py
backend/app/middleware/: audit.py  rate_limit.py  security_headers.py
backend/app/services/: audit.py  audit_export_service.py  divera_members.py  divera_poller.py  event_export.py  excel_import_export.py  export_service.py  microsoft_auth.py  notification_service.py  photo_storage.py  settings.py  tokens.py  (+5 more)
backend/tests/: conftest.py  test_events.py  test_simple.py
(+375 files in other folders)
