[project]
name = "kprueck-backend"
version = "1.0.0"
description = "FastAPI backend for KP Rück firefighting operations dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.8.0",
    "pillow>=11.0.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "reportlab>=4.4.4",
    "apscheduler>=3.10.4",
    "markdown>=3.9",
    "python-socketio>=5.14.3",
    "fastapi-socketio>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=35",  # Target: 50% → 70%. Raise as coverage improves.
    "-v",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests (may use database)",
    "security: Security-focused tests",
    "slow: Tests that take longer to run",
    "api: API endpoint tests",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "bandit>=1.7.0",
]
